# codefalcon

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTEXT.md  Dockerfile  README.md  TODOS.md  pyproject.toml  requirements.txt  spec.md
.github/workflows/: codefalcon-review.yml
skills/architecture/: module_coupling.yaml  solid_principles.yaml
skills/performance/: loop_repeated_computation.yaml  n_plus_one.yaml
skills/security/: command_injection.yaml  hardcoded_secret.yaml  sql_injection.yaml
skills/style/: function_length.yaml  naming_convention.yaml
src/: __init__.py  main.py
src/agents/: __init__.py  architect_agent.py  base.py  bug_perf_agent.py  spec_check_agent.py  style_accept_agent.py
src/context/: __init__.py  collector.py  indexer.py
src/orchestrator/: __init__.py  graph.py  router.py  state.py
src/output/: __init__.py  agent_bridge.py  mcp_server.py  reporter.py  todo_manager.py
src/review/: __init__.py  aggregator.py  prioritizer.py
src/rules/: __init__.py  security.py  style.py
src/skills/: __init__.py  skill_executor.py  skill_loader.py
src/tools/: __init__.py  ast_analyzer.py  code_search.py  comment_poisoning_detector.py  dep_analyzer.py  diff_analyzer.py
src/utils/: __init__.py  config.py  cost_tracker.py  logger.py
tests/: test_base_agent.py  test_dep_analyzer.py  test_e2e.py  test_integration.py  test_poisoning.py  test_review.py  test_rules.py  test_skill_executor.py  test_style.py  test_tools.py
tests/fixtures/: sample_buggy.py  sample_clean.py
